k8s/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: expensy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend-container
          image: sjagtap0/backend:new
          imagePullPolicy: Always
          ports:
            - containerPort: 8706
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: expensy
  labels:
    app: backend # for prometheus
spec:
  selector:
    app: backend
  ports:
    - name: http # port label
      port: 8706 # external port exposed by the service
      targetPort: 8706 # actual port inside the pod 
  type: ClusterIP
