k8s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: expensy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: sjagtap0/frontend
          ports:
            - containerPort: 3000 # overwrites the port exposed in frontend Docker file
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000 # frontend-service exposes port 3000 and targeting port 3000 on the pod
      targetPort: 3000
  type: ClusterIP
