k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expensy-ingress
  namespace: expensy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  ingressClassName:  "nginx"
  # use the tls certificate generated by Certbot
  tls:
  - hosts:
    - swapnaja.store
    secretName: swapnaja-tls  # certificate is stored in a Kubernetes secret 
  rules:
  - host: swapnaja.store
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 3000
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-service  # Backend service for path /api
            port:
              number: 8706  # Port exposed by the backend service
